solved overflow problem

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,7 @@
 .App {
   background-color: var(--color-primary-bg);
   font-size: 62.5%;
-  padding: unset 2rem !important;
-  padding-left: 0 !important;
+  padding: unset 0 !important;
 }
 
 .App::before {
